crates/aven-check/tests/fixtures/check/valid/pick-user-defined-shadow.av
User = { name: Text, email: Text }
user : User = { name: "Ada", email: "ada@x.dev" }

pick = (object: {..r}, @keys: keysOf(r)@{}) => object
picked : User = pick(user, @{"name"})
