crates/aven-check/tests/fixtures/check/invalid/comptime-fn-recursion.av
loop = (r) => loop(r)
User = { name: Text }
Keys = loop(User)
